--- a/README
+++ b/README
@@ -11,6 +11,6 @@ pip install:
     sentence_transformers
 
 Development Run:
-    uvicorn main:app -reload
+    uvicorn main:app --reload
     streamlit run .\streamlit_app.py
 
