--- a/README
+++ b/README
@@ -1,4 +1,5 @@
 pip install:
+    streamlit
     langchain_openai
     python-dotenv
     fastapi uvicorn
@@ -11,6 +12,10 @@ pip install:
     sentence_transformers
 
 Development Run:
-    uvicorn main:app --reload
-    streamlit run .\streamlit_app.py
+    uvicorn api.main:app --reload
+    streamlit run app/streamlit_app.py
+
+    Check FastAPI: http://127.0.0.1:8000/docs
+    Streamlit UI:  http://localhost:8501/
+
 
