--- a/README
+++ b/README
@@ -19,5 +19,13 @@ Development Run:
     Check FastAPI: http://127.0.0.1:8000/docs
     Streamlit UI:  http://localhost:8501/
 
+Production Run:
+    Build Command: pip install -r requirements.txt
+    Start Command: ./start.sh
+    
+(setup for a render webservice)
 
-Added default document upload and protections at Sidebar frontend and  API backend in main.py and db_tils.py
+
+Main Changelog:
+12/7/24 - Added default document upload and protections at streamlit frontend (sidebar) and API backend in main.py and db_tils.py
+
