--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 This app uses FastAPI for the backend and Streamlit for the front end.  See api and app directories respectively.
 
 Setup:
-create a .env file using the example. FAST_API_URL is only nessisary when deploying to production, defaults to localhost:8000. external APIs can be tested with tests/hello_openai.py
+create a .env file using the example. FAST_API_URL is only nessisary when deploying to production, defaults to localhost:8000. external APIs can be tested with tests/hello_openai.py.  To be able to delete default documents create a secure ADMIN_TOKEN
 
 Requirements are in requirements.txt and can be built with pip install -r requirements.txt
 pip install:
@@ -39,4 +39,7 @@ Frontend-
 (two seperate services on render - backend api and frontend)
 
 
-
+--ADMIN TOOLS--
+added the ability to delete the default document by running a local script
+Run the admin tool:
+python admin_tools.py
