--- a/README
+++ b/README
@@ -1,50 +1,67 @@
-This app uses FastAPI for the backend and Streamlit for the front end.  See api and app directories respectively.
+# 🤖 Retreval Augmented Chatbot - Chatbot Tutor
 
-Setup:
-create a .env file using the example. FAST_API_URL is only nessisary when deploying to production, defaults to localhost:8000. external APIs can be tested with tests/hello_openai.py.  To be able to delete default documents create a secure ADMIN_TOKEN
+## 📋 Overview
+Configured as a RAG AI Chatbot for exploring textbooks, a default document is loaded with an admin tool and the user can upload their own documents for AI context as well. This application combines FastAPI for the backend API service and Streamlit for the frontend user interface. The project is organized into `api` and `app` directories respectively.
 
-Requirements are in requirements.txt and can be built with pip install -r requirements.txt
-pip install:
-    streamlit
-    python-dotenv
-    fastapi 
-    uvicorn
-    langchain 
-    langchain-openai 
-    langchain-core 
-    langchain-community 
-    docx2txt 
-    pypdf  
-    langchain_chroma 
-    sentence-transformers
+## ⚙️ Setup
+1. Create a `.env` file using the provided example
+   - `FAST_API_URL` is only required for production (defaults to localhost:8000)
+   - Set a secure `ADMIN_TOKEN` to enable default document deletion
+   - External APIs can be tested using `tests/hello_openai.py`
 
-Development Run:
-    Build: pip install -r requirements.txt
-    Start FastAPI Backend: uvicorn api.main:app --reload
-    Start Streamlit Frontend: streamlit run app/streamlit_app.py
+## 📦 Installation
+Install dependencies from `requirements.txt`:
+```bash
+pip install -r requirements.txt
+```
 
-    Check FastAPI: http://127.0.0.1:8000/docs for api endpoints
-    Streamlit UI:  http://localhost:8501/ for development frontend
+## 🛠️ Development Environment
 
-Production Run:
-Backend-
-    Build Command: pip install -r requirements.txt
-    Start Command: uvicorn api.main:app --host 0.0.0.0 --port $PORT
+### Running the Application
+1. Start FastAPI Backend:
+```bash
+uvicorn api.main:app --reload
+```
 
-Frontend-
-    Build Command: pip install -r requirements.txt
-    Start Command: streamlit run app/streamlit_app.py --server.port $PORT --server.address 0.0.0.0
-    
-    
-(two seperate services on render - backend api and frontend)
+2. Start Streamlit Frontend:
+```bash
+streamlit run app/streamlit_app.py
+```
 
+### Access Points
+- FastAPI Documentation: `http://127.0.0.1:8000/docs`
+- Streamlit Interface: `http://localhost:8501`
 
---ADMIN TOOLS--
-local script to:
-upload the default documents
-delete any document including the default document 
-list documents
-upload custom document
+## 🌐 Production Deployment
 
-Run the admin tool:
+### Backend Service
+```bash
+# Build
+pip install -r requirements.txt
+
+# Start
+uvicorn api.main:app --host 0.0.0.0 --port $PORT
+```
+
+### Frontend Service
+```bash
+# Build
+pip install -r requirements.txt
+
+# Start
+streamlit run app/streamlit_app.py --server.port $PORT --server.address 0.0.0.0
+```
+
+**Note**: Deploy as two separate services on render - backend API and frontend
+
+## 🔧 Admin Tools
+A local script is provided for document management:
+- Upload default documents
+- Delete any document (including defaults)
+- List all documents
+- Upload custom documents
+
+### Running Admin Tools
+```bash
 python admin_tools.py
+```
